--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -237,7 +237,7 @@ import { pgwWrap } from "../js/pgw.js";
   .nav-container {
     width: 100%;
     margin: 0 auto;
-    padding: 50px;
+    padding: 50px 50px 20px 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -245,7 +245,7 @@ import { pgwWrap } from "../js/pgw.js";
     z-index: 1000;
 
     @media (max-width: 1024px) {
-      padding: 12px;
+      padding: 12px 12px 20px 12px;
     }
 
     &.menu-open {
