--- a/src/pages/rules.astro
+++ b/src/pages/rules.astro
@@ -10,8 +10,10 @@ import { pgwWrap } from "../js/pgw.js";
 ---
 
 <Layout>
-  <Nav />
-  <Banner />
+  <section style="overflow: hidden;">
+    <Nav />
+    <Banner />
+  </section>
   <Act />
   <Rolltop />
   <Spnosor />
