--- a/src/components/ActPopup.astro
+++ b/src/components/ActPopup.astro
@@ -91,12 +91,18 @@
 
     // 個資聲明彈窗
     privacyBtn?.addEventListener("click", function () {
-      showModal("/image/personinfo_title.svg", getPrivacyContent());
+      showModal(
+        "https://lab-event.udn.com/bd_500bowls_2025/image/personinfo_title.svg",
+        getPrivacyContent()
+      );
     });
 
     // 注意事項彈窗
     noticeBtn?.addEventListener("click", function () {
-      showModal("/image/information_title.svg", getNoticeContent());
+      showModal(
+        "https://lab-event.udn.com/bd_500bowls_2025/image/information_title.svg",
+        getNoticeContent()
+      );
     });
 
     // 顯示彈窗函數
@@ -189,7 +195,7 @@
       const closeButton = document.createElement("button");
       closeButton.className = "modal-close-btn";
       closeButton.id = "close-modal";
-      closeButton.innerHTML = `<img src="/image/close_btn.svg" alt="關閉" style="width: 100%; height: 100%;" />`;
+      closeButton.innerHTML = `<img src="https://lab-event.udn.com/bd_500bowls_2025/image/close_btn.svg" alt="關閉" style="width: 100%; height: 100%;" />`;
       closeButton.style.cssText = `
         background: transparent;
         border: none;
