--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -208,7 +208,7 @@
   });
 </script>
 
-<style lang="scss">
+<style lang="scss" scoped>
   .banner {
     width: 100%;
     height: auto;
@@ -251,7 +251,6 @@
       }
     }
     &__image {
-      // border: 1px solid red;
       flex: 1;
       width: 228px;
       height: 516px;
@@ -471,10 +470,8 @@
             object-fit: contain;
             border-radius: 50%;
             transition: all 0.3s ease;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-            background: rgba(255, 255, 255, 0.9);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
             opacity: 1;
-            padding: 5px;
             @media (max-width: 1200px) {
               width: 70px;
               height: 70px;
