--- a/src/components/ActPrize.astro
+++ b/src/components/ActPrize.astro
@@ -28,7 +28,7 @@
         <div class="actprize__image">
           <img src="/image/LINE500.png" alt="LINE500" />
         </div>
-        <h4 class="actprize__name">LINE POINT 500 點</h4>
+        <h4 class="actprize__name">LINE POINS 500 點</h4>
         <p class="actprize__quantity">30名</p>
       </div>
 
@@ -37,7 +37,7 @@
         <div class="actprize__image">
           <img src="/image/LINE5.png" alt="LINE5" />
         </div>
-        <h4 class="actprize__name">LINE POINT 5 點</h4>
+        <h4 class="actprize__name">LINE POINTS 5 點</h4>
         <p class="actprize__description">首次投票即贈，獲獎資格不累計</p>
         <p class="actprize__quantity">限量3萬組，送完為止</p>
       </div>
