--- a/src/components/ActRemind.astro
+++ b/src/components/ActRemind.astro
@@ -18,7 +18,7 @@
       </li>
       <li class="actremind__item">
         各獎項（獎品圖示僅供參考）將於活動結束後，由主辦單位以系統隨機抽出，並以 e-mail
-        或簡訊方式通知領取（不包含 LINE POINT 5 點），請務必確認填寫資訊的真實性與正確性皆無誤。
+        或簡訊方式通知領取（不包含 LINE POINTS 5 點），請務必確認填寫資訊的真實性與正確性皆無誤。
       </li>
       <li class="actremind__item">
         主辦單位保有針對重複、異常等投票行為進行異動之權利，恕不另行通知。
