--- a/src/components/topthree.astro
+++ b/src/components/topthree.astro
@@ -295,6 +295,7 @@ import { pgwWrap } from "../js/pgw.js";
       flex-direction: column;
       gap: 40px;
       justify-content: center;
+      min-height: clamp(340px, 75vw, 380px);
     }
 
     /* 卡片基本樣式 */
