--- a/src/pages/rules.astro
+++ b/src/pages/rules.astro
@@ -20,7 +20,8 @@ import { pgwWrap } from "../js/pgw.js";
   <Foot />
 </Layout>
 <style lang="scss">
-  @import "../styles/sweetalert2.scss";
+  // @import "../styles/sweetalert2.scss";
+  @use "../styles/sweetalert2.scss" as *;
 </style>
 
 <script>
